src/test/ui/simd-type.stderr
error[E0075]: SIMD vector cannot be empty
  --> $DIR/simd-type.rs:5:1
   |
LL | struct empty;
   | ^^^^^^^^^^^^^

error[E0076]: SIMD vector should be homogeneous
  --> $DIR/simd-type.rs:8:1
   |
LL | struct i64f64(i64, f64);
   | ^^^^^^^^^^^^^^^^^^^^^^^^ SIMD elements must have the same type

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0075, E0076.
For more information about an error, try `rustc --explain E0075`.
